--- a/blog/files/blog_home/styles.css
+++ b/blog/files/blog_home/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1079px;
+  width:887px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,21 +12,115 @@
   position:absolute;
   z-index:0;
 }
+#u0 {
+  position:absolute;
+  left:32px;
+  top:162px;
+  width:757px;
+  height:38px;
+  font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
+  font-weight:700;
+  font-style:normal;
+  font-size:28px;
+  color:#003399;
+}
+#u0_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:757px;
+  height:38px;
+}
 #u1 {
   position:absolute;
-  left:222px;
-  top:520px;
+  left:0px;
+  top:0px;
+  width:757px;
+  word-wrap:break-word;
+}
+#u2 {
+  position:absolute;
+  left:23px;
+  top:691px;
+  width:598px;
+  height:449px;
+  font-family:'HelveticaNeue', 'Helvetica Neue';
+  font-size:14px;
+  line-height:20px;
+}
+#u2_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:598px;
+  height:449px;
+}
+#u3 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:598px;
+  word-wrap:break-word;
+}
+#u5 {
+  position:absolute;
+  left:450px;
+  top:930px;
+  width:140px;
+  height:70px;
+}
+#u5_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:140px;
+  height:70px;
+}
+#u6 {
+  position:absolute;
+  left:2px;
+  top:27px;
+  width:136px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u7 {
+  position:absolute;
+  left:460px;
+  top:937px;
+  width:120px;
+  height:56px;
+}
+#u7_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:120px;
+  height:56px;
+}
+#u8 {
+  position:absolute;
+  left:2px;
+  top:20px;
+  width:116px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u9 {
+  position:absolute;
+  left:32px;
+  top:220px;
   width:598px;
   height:448px;
 }
-#u1_img {
+#u9_img {
   position:absolute;
   left:0px;
   top:0px;
   width:598px;
   height:448px;
 }
-#u2 {
+#u10 {
   position:absolute;
   left:2px;
   top:216px;
@@ -34,117 +128,70 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u3 {
+#u11 {
   position:absolute;
-  left:222px;
-  top:442px;
-  width:408px;
-  height:38px;
-  font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
-  font-style:normal;
-}
-#u3_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:408px;
-  height:38px;
-}
-#u4 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:408px;
-  word-wrap:break-word;
-}
-#u5 {
-  position:absolute;
-  left:730px;
-  top:340px;
+  left:538px;
+  top:40px;
   width:240px;
   height:60px;
   font-family:'HelveticaNeue', 'Helvetica Neue';
   font-weight:400;
   font-style:normal;
 }
-#u5_img {
+#u11_img {
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
   height:60px;
 }
-#u6 {
+#u12 {
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
   word-wrap:break-word;
 }
-#u7 {
+#u13 {
   position:absolute;
-  left:222px;
-  top:991px;
-  width:598px;
-  height:449px;
-  font-family:'HelveticaNeue-Italic', 'Helvetica Neue Italic', 'Helvetica Neue';
-  font-weight:400;
-  line-height:20px;
-}
-#u7_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:598px;
-  height:449px;
-}
-#u8 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:598px;
-  word-wrap:break-word;
-}
-#u9 {
-  position:absolute;
-  left:850px;
-  top:532px;
+  left:658px;
+  top:250px;
   width:234px;
   height:105px;
 }
-#u9_children {
+#u13_children {
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u10 {
+#u14 {
   position:absolute;
   left:0px;
   top:0px;
   width:96px;
   height:20px;
 }
-#u11 {
+#u15 {
   position:absolute;
   left:6px;
   top:6px;
   width:9px;
   height:9px;
 }
-#u11_img {
+#u15_img {
   position:absolute;
   left:0px;
   top:0px;
   width:9px;
   height:9px;
 }
-#u11_img.selected {
+#u15_img.selected {
 }
-#u11.selected {
+#u15.selected {
 }
-#u12 {
+#u16 {
   position:absolute;
   left:2px;
   top:-4px;
@@ -152,150 +199,150 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u13 {
+#u17 {
   position:absolute;
   left:22px;
   top:0px;
   width:74px;
   height:20px;
 }
-#u13_img {
+#u17_img {
   position:absolute;
   left:0px;
   top:0px;
   width:74px;
   height:20px;
 }
-#u14 {
+#u18 {
   position:absolute;
   left:3px;
   top:2px;
   width:69px;
   white-space:nowrap;
 }
-#u10_children {
+#u14_children {
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u15 {
+#u19 {
   position:absolute;
   left:20px;
   top:20px;
   width:176px;
   height:20px;
 }
-#u16 {
+#u20 {
   position:absolute;
   left:22px;
   top:0px;
   width:154px;
   height:20px;
 }
-#u16_img {
+#u20_img {
   position:absolute;
   left:0px;
   top:0px;
   width:154px;
   height:20px;
 }
-#u17 {
+#u21 {
   position:absolute;
   left:3px;
   top:2px;
   width:149px;
   white-space:nowrap;
 }
-#u18 {
+#u22 {
   position:absolute;
   left:20px;
   top:40px;
   width:209px;
   height:20px;
 }
-#u19 {
+#u23 {
   position:absolute;
   left:22px;
   top:0px;
   width:187px;
   height:20px;
 }
-#u19_img {
+#u23_img {
   position:absolute;
   left:0px;
   top:0px;
   width:187px;
   height:20px;
 }
-#u20 {
+#u24 {
   position:absolute;
   left:3px;
   top:2px;
   width:182px;
   white-space:nowrap;
 }
-#u21 {
+#u25 {
   position:absolute;
   left:20px;
   top:60px;
-  width:171px;
+  width:117px;
   height:20px;
 }
-#u22 {
+#u26 {
   position:absolute;
   left:22px;
   top:0px;
-  width:149px;
+  width:95px;
   height:20px;
 }
-#u22_img {
+#u26_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:149px;
+  width:95px;
   height:20px;
 }
-#u23 {
+#u27 {
   position:absolute;
   left:3px;
   top:2px;
-  width:144px;
+  width:90px;
   white-space:nowrap;
 }
-#u24 {
+#u28 {
   position:absolute;
   left:20px;
   top:80px;
   width:174px;
   height:20px;
 }
-#u25 {
+#u29 {
   position:absolute;
   left:22px;
   top:0px;
   width:152px;
   height:20px;
 }
-#u25_img {
+#u29_img {
   position:absolute;
   left:0px;
   top:0px;
   width:152px;
   height:20px;
 }
-#u26 {
+#u30 {
   position:absolute;
   left:3px;
   top:2px;
   width:147px;
   white-space:nowrap;
 }
-#u27 {
+#u31 {
   position:absolute;
-  left:850px;
-  top:512px;
+  left:658px;
+  top:212px;
   width:200px;
   height:20px;
   font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
@@ -305,14 +352,14 @@
   color:#000099;
   line-height:20px;
 }
-#u27_img {
+#u31_img {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
   height:20px;
 }
-#u28 {
+#u32 {
   position:absolute;
   left:0px;
   top:0px;
