--- a/blog/files/dev_bootcamp_kitchen_culture/styles.css
+++ b/blog/files/dev_bootcamp_kitchen_culture/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:1079px;
+  width:882px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -12,139 +12,119 @@
   position:absolute;
   z-index:0;
 }
-#u1 {
+#u0 {
   position:absolute;
-  left:222px;
-  top:520px;
-  width:598px;
-  height:448px;
+  left:25px;
+  top:147px;
+  width:505px;
+  height:38px;
+  font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
+  font-weight:700;
+  font-style:normal;
+  font-size:28px;
+  color:#003399;
 }
-#u1_img {
+#u0_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:598px;
-  height:448px;
+  width:505px;
+  height:38px;
+}
+#u1 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:505px;
+  word-wrap:break-word;
 }
 #u2 {
   position:absolute;
-  left:2px;
-  top:216px;
-  width:594px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u3 {
-  position:absolute;
-  left:222px;
-  top:442px;
-  width:408px;
-  height:38px;
-  font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
-  font-style:normal;
-}
-#u3_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:408px;
-  height:38px;
-}
-#u4 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:408px;
-  word-wrap:break-word;
-}
-#u5 {
-  position:absolute;
-  left:730px;
-  top:340px;
+  left:533px;
+  top:45px;
   width:240px;
   height:60px;
   font-family:'HelveticaNeue', 'Helvetica Neue';
   font-weight:400;
   font-style:normal;
 }
-#u5_img {
+#u2_img {
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
   height:60px;
 }
-#u6 {
+#u3 {
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
   word-wrap:break-word;
 }
-#u7 {
+#u4 {
   position:absolute;
-  left:222px;
-  top:991px;
+  left:25px;
+  top:696px;
   width:598px;
   height:449px;
   font-family:'HelveticaNeue-Italic', 'Helvetica Neue Italic', 'Helvetica Neue';
-  font-weight:400;
   line-height:20px;
 }
-#u7_img {
+#u4_img {
   position:absolute;
   left:0px;
   top:0px;
   width:598px;
   height:449px;
 }
-#u8 {
+#u5 {
   position:absolute;
   left:0px;
   top:0px;
   width:598px;
   word-wrap:break-word;
 }
-#u9 {
+#u11 {
   position:absolute;
-  left:850px;
-  top:532px;
+  left:653px;
+  top:237px;
   width:234px;
   height:105px;
 }
-#u9_children {
+#u11_children {
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u10 {
+#u12 {
   position:absolute;
   left:0px;
   top:0px;
   width:96px;
   height:20px;
 }
-#u11 {
+#u13 {
   position:absolute;
   left:6px;
   top:6px;
   width:9px;
   height:9px;
 }
-#u11_img {
+#u13_img {
   position:absolute;
   left:0px;
   top:0px;
   width:9px;
   height:9px;
 }
-#u11_img.selected {
+#u13_img.selected {
 }
-#u11.selected {
+#u13.selected {
 }
-#u12 {
+#u14 {
   position:absolute;
   left:2px;
   top:-4px;
@@ -152,150 +132,150 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u13 {
+#u15 {
   position:absolute;
   left:22px;
   top:0px;
   width:74px;
   height:20px;
 }
-#u13_img {
+#u15_img {
   position:absolute;
   left:0px;
   top:0px;
   width:74px;
   height:20px;
 }
-#u14 {
+#u16 {
   position:absolute;
   left:3px;
   top:2px;
   width:69px;
   white-space:nowrap;
 }
-#u10_children {
+#u12_children {
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u15 {
+#u17 {
   position:absolute;
   left:20px;
   top:20px;
   width:176px;
   height:20px;
 }
-#u16 {
+#u18 {
   position:absolute;
   left:22px;
   top:0px;
   width:154px;
   height:20px;
 }
-#u16_img {
+#u18_img {
   position:absolute;
   left:0px;
   top:0px;
   width:154px;
   height:20px;
 }
-#u17 {
+#u19 {
   position:absolute;
   left:3px;
   top:2px;
   width:149px;
   white-space:nowrap;
 }
-#u18 {
+#u20 {
   position:absolute;
   left:20px;
   top:40px;
   width:209px;
   height:20px;
 }
-#u19 {
+#u21 {
   position:absolute;
   left:22px;
   top:0px;
   width:187px;
   height:20px;
 }
-#u19_img {
+#u21_img {
   position:absolute;
   left:0px;
   top:0px;
   width:187px;
   height:20px;
 }
-#u20 {
+#u22 {
   position:absolute;
   left:3px;
   top:2px;
   width:182px;
   white-space:nowrap;
 }
-#u21 {
+#u23 {
   position:absolute;
   left:20px;
   top:60px;
   width:171px;
   height:20px;
 }
-#u22 {
+#u24 {
   position:absolute;
   left:22px;
   top:0px;
   width:149px;
   height:20px;
 }
-#u22_img {
+#u24_img {
   position:absolute;
   left:0px;
   top:0px;
   width:149px;
   height:20px;
 }
-#u23 {
+#u25 {
   position:absolute;
   left:3px;
   top:2px;
   width:144px;
   white-space:nowrap;
 }
-#u24 {
+#u26 {
   position:absolute;
   left:20px;
   top:80px;
   width:174px;
   height:20px;
 }
-#u25 {
+#u27 {
   position:absolute;
   left:22px;
   top:0px;
   width:152px;
   height:20px;
 }
-#u25_img {
+#u27_img {
   position:absolute;
   left:0px;
   top:0px;
   width:152px;
   height:20px;
 }
-#u26 {
+#u28 {
   position:absolute;
   left:3px;
   top:2px;
   width:147px;
   white-space:nowrap;
 }
-#u27 {
+#u29 {
   position:absolute;
-  left:850px;
-  top:512px;
+  left:653px;
+  top:217px;
   width:200px;
   height:20px;
   font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
@@ -305,17 +285,39 @@
   color:#000099;
   line-height:20px;
 }
-#u27_img {
+#u29_img {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
   height:20px;
 }
-#u28 {
+#u30 {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
+  word-wrap:break-word;
+}
+#u31 {
+  position:absolute;
+  left:25px;
+  top:195px;
+  width:555px;
+  height:415px;
+}
+#u31_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:555px;
+  height:415px;
+}
+#u32 {
+  position:absolute;
+  left:2px;
+  top:200px;
+  width:551px;
+  visibility:hidden;
   word-wrap:break-word;
 }
