--- a/blog/files/page_1/styles.css
+++ b/blog/files/page_1/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:static;
   left:auto;
-  width:990px;
+  width:850px;
   margin-left:0;
   margin-right:0;
   text-align:left;
@@ -80,47 +80,114 @@
 }
 #u6 {
   position:absolute;
-  left:610px;
-  top:1040px;
-  width:380px;
-  height:380px;
+  left:132px;
+  top:1031px;
+  width:468px;
+  height:449px;
+  font-family:'HelveticaNeue', 'Helvetica Neue';
+  font-weight:400;
+  font-style:normal;
+  font-size:14px;
+  line-height:20px;
 }
 #u6_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:380px;
-  height:380px;
+  width:468px;
+  height:449px;
 }
 #u7 {
   position:absolute;
-  left:2px;
-  top:182px;
-  width:376px;
-  visibility:hidden;
+  left:0px;
+  top:0px;
+  width:468px;
   word-wrap:break-word;
 }
 #u8 {
   position:absolute;
-  left:132px;
-  top:1031px;
-  width:468px;
-  height:449px;
-  font-family:'HelveticaNeue-Italic', 'Helvetica Neue Italic', 'Helvetica Neue';
-  font-weight:400;
-  line-height:20px;
+  left:520px;
+  top:1270px;
+  width:140px;
+  height:70px;
 }
 #u8_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:468px;
-  height:449px;
+  width:140px;
+  height:70px;
 }
 #u9 {
   position:absolute;
+  left:2px;
+  top:27px;
+  width:136px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u10 {
+  position:absolute;
+  left:530px;
+  top:1277px;
+  width:120px;
+  height:56px;
+}
+#u10_img {
+  position:absolute;
   left:0px;
   top:0px;
-  width:468px;
+  width:120px;
+  height:56px;
+}
+#u11 {
+  position:absolute;
+  left:2px;
+  top:20px;
+  width:116px;
+  visibility:hidden;
   word-wrap:break-word;
+}
+#u12 {
+  position:absolute;
+  left:784px;
+  top:560px;
+  width:67px;
+  height:25px;
+}
+#u12_children {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u13 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:62px;
+  height:20px;
+}
+#u14 {
+  position:absolute;
+  left:22px;
+  top:0px;
+  width:40px;
+  height:20px;
+}
+#u14_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:40px;
+  height:20px;
+}
+#u15 {
+  position:absolute;
+  left:3px;
+  top:2px;
+  width:35px;
+  visibility:hidden;
+  white-space:nowrap;
 }
