--- a/blog/files/t1-git-blog/styles.css
+++ b/blog/files/t1-git-blog/styles.css
@@ -14,121 +14,74 @@
 }
 #u0 {
   position:absolute;
-  left:32px;
-  top:162px;
-  width:757px;
+  left:30px;
+  top:142px;
+  width:408px;
   height:38px;
   font-family:'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
-  font-weight:700;
   font-style:normal;
-  font-size:28px;
-  color:#003399;
 }
 #u0_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:757px;
+  width:408px;
   height:38px;
 }
 #u1 {
   position:absolute;
   left:0px;
   top:0px;
-  width:757px;
+  width:408px;
   word-wrap:break-word;
 }
 #u2 {
   position:absolute;
-  left:23px;
-  top:691px;
-  width:598px;
+  left:10px;
+  top:1130px;
+  width:764px;
   height:449px;
   font-family:'HelveticaNeue', 'Helvetica Neue';
-  font-size:14px;
+  font-style:normal;
   line-height:20px;
 }
 #u2_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:598px;
+  width:764px;
   height:449px;
 }
 #u3 {
   position:absolute;
   left:0px;
   top:0px;
-  width:598px;
+  width:764px;
   word-wrap:break-word;
 }
 #u5 {
   position:absolute;
-  left:450px;
-  top:930px;
-  width:140px;
-  height:70px;
+  left:10px;
+  top:232px;
+  width:670px;
+  height:888px;
 }
 #u5_img {
   position:absolute;
   left:0px;
   top:0px;
-  width:140px;
-  height:70px;
+  width:670px;
+  height:888px;
 }
 #u6 {
   position:absolute;
   left:2px;
-  top:27px;
-  width:136px;
+  top:436px;
+  width:666px;
   visibility:hidden;
   word-wrap:break-word;
 }
 #u7 {
-  position:absolute;
-  left:460px;
-  top:937px;
-  width:120px;
-  height:56px;
-}
-#u7_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:120px;
-  height:56px;
-}
-#u8 {
-  position:absolute;
-  left:2px;
-  top:20px;
-  width:116px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u9 {
-  position:absolute;
-  left:32px;
-  top:220px;
-  width:598px;
-  height:448px;
-}
-#u9_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:598px;
-  height:448px;
-}
-#u10 {
-  position:absolute;
-  left:2px;
-  top:216px;
-  width:594px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u11 {
   position:absolute;
   left:538px;
   top:40px;
@@ -138,60 +91,60 @@
   font-weight:400;
   font-style:normal;
 }
-#u11_img {
+#u7_img {
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
   height:60px;
 }
-#u12 {
+#u8 {
   position:absolute;
   left:0px;
   top:0px;
   width:240px;
   word-wrap:break-word;
 }
-#u14 {
+#u10 {
   position:absolute;
   left:658px;
   top:242px;
   width:234px;
   height:105px;
 }
-#u14_children {
+#u10_children {
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u15 {
+#u11 {
   position:absolute;
   left:0px;
   top:0px;
   width:96px;
   height:20px;
 }
-#u16 {
+#u12 {
   position:absolute;
   left:6px;
   top:6px;
   width:9px;
   height:9px;
 }
-#u16_img {
+#u12_img {
   position:absolute;
   left:0px;
   top:0px;
   width:9px;
   height:9px;
 }
-#u16_img.selected {
+#u12_img.selected {
 }
-#u16.selected {
+#u12.selected {
 }
-#u17 {
+#u13 {
   position:absolute;
   left:2px;
   top:-4px;
@@ -199,147 +152,147 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u18 {
+#u14 {
   position:absolute;
   left:22px;
   top:0px;
   width:74px;
   height:20px;
 }
-#u18_img {
+#u14_img {
   position:absolute;
   left:0px;
   top:0px;
   width:74px;
   height:20px;
 }
-#u19 {
+#u15 {
   position:absolute;
   left:3px;
   top:2px;
   width:69px;
   white-space:nowrap;
 }
-#u15_children {
+#u11_children {
   position:absolute;
   left:0px;
   top:0px;
   width:0px;
   height:0px;
 }
-#u20 {
+#u16 {
   position:absolute;
   left:20px;
   top:20px;
   width:176px;
   height:20px;
 }
-#u21 {
+#u17 {
   position:absolute;
   left:22px;
   top:0px;
   width:154px;
   height:20px;
 }
-#u21_img {
+#u17_img {
   position:absolute;
   left:0px;
   top:0px;
   width:154px;
   height:20px;
 }
-#u22 {
+#u18 {
   position:absolute;
   left:3px;
   top:2px;
   width:149px;
   white-space:nowrap;
 }
-#u23 {
+#u19 {
   position:absolute;
   left:20px;
   top:40px;
   width:209px;
   height:20px;
 }
-#u24 {
+#u20 {
   position:absolute;
   left:22px;
   top:0px;
   width:187px;
   height:20px;
 }
-#u24_img {
+#u20_img {
   position:absolute;
   left:0px;
   top:0px;
   width:187px;
   height:20px;
 }
-#u25 {
+#u21 {
   position:absolute;
   left:3px;
   top:2px;
   width:182px;
   white-space:nowrap;
 }
-#u26 {
+#u22 {
   position:absolute;
   left:20px;
   top:60px;
   width:117px;
   height:20px;
 }
-#u27 {
+#u23 {
   position:absolute;
   left:22px;
   top:0px;
   width:95px;
   height:20px;
 }
-#u27_img {
+#u23_img {
   position:absolute;
   left:0px;
   top:0px;
   width:95px;
   height:20px;
 }
-#u28 {
+#u24 {
   position:absolute;
   left:3px;
   top:2px;
   width:90px;
   white-space:nowrap;
 }
-#u29 {
+#u25 {
   position:absolute;
   left:20px;
   top:80px;
   width:174px;
   height:20px;
 }
-#u30 {
+#u26 {
   position:absolute;
   left:22px;
   top:0px;
   width:152px;
   height:20px;
 }
-#u30_img {
+#u26_img {
   position:absolute;
   left:0px;
   top:0px;
   width:152px;
   height:20px;
 }
-#u31 {
+#u27 {
   position:absolute;
   left:3px;
   top:2px;
   width:147px;
   white-space:nowrap;
 }
-#u32 {
+#u28 {
   position:absolute;
   left:658px;
   top:212px;
@@ -352,14 +305,14 @@
   color:#000099;
   line-height:20px;
 }
-#u32_img {
+#u28_img {
   position:absolute;
   left:0px;
   top:0px;
   width:200px;
   height:20px;
 }
-#u33 {
+#u29 {
   position:absolute;
   left:0px;
   top:0px;
