--- a/blog/files/blog_home/styles.css
+++ b/blog/files/blog_home/styles.css
@@ -233,6 +233,8 @@
   top:20px;
   width:176px;
   height:20px;
+  text-decoration:underline;
+  color:#0033CC;
 }
 #u21 {
   position:absolute;
@@ -261,6 +263,8 @@
   top:40px;
   width:209px;
   height:20px;
+  text-decoration:underline;
+  color:#0033CC;
 }
 #u24 {
   position:absolute;
@@ -289,6 +293,8 @@
   top:60px;
   width:117px;
   height:20px;
+  text-decoration:underline;
+  color:#0033CC;
 }
 #u27 {
   position:absolute;
