--- a/blog/files/c1-chefs-kitchen/styles.css
+++ b/blog/files/c1-chefs-kitchen/styles.css
@@ -188,6 +188,8 @@
   top:20px;
   width:176px;
   height:20px;
+  text-decoration:underline;
+  color:#0033CC;
 }
 #u21 {
   position:absolute;
@@ -216,6 +218,8 @@
   top:40px;
   width:209px;
   height:20px;
+  text-decoration:underline;
+  color:#0033CC;
 }
 #u24 {
   position:absolute;
@@ -244,6 +248,8 @@
   top:60px;
   width:117px;
   height:20px;
+  text-decoration:underline;
+  color:#0033CC;
 }
 #u27 {
   position:absolute;
