First version of ruby_quick_ref redo.

--- a/Code/Ruby_Cheat_Sheet/tree.css
+++ b/Code/Ruby_Cheat_Sheet/tree.css
@@ -3,7 +3,7 @@
 
 }
 header {
-    background-color: #4D8D47;
+    background-color: #0F71B1;
     font-family: 'HelveticaNeue-Medium', 'Helvetica Neue', 'sans-serif';
     font-size: 30px;
     border:1px solid black;
