--- a/content-stylesheet.css
+++ b/content-stylesheet.css
@@ -20,6 +20,26 @@ header {
     font-size: 28px;
     color: #003399;
 }
+#headsp {
+
+    margin-bottom:1em;
+}
+
+#cmline {
+    text-align:right;
+    font-size:10pt;
+    font-family: 'HelveticaNeue-Medium', 'Helvetica Neue', 'sans-serif';
+
+}
+#code1984 {
+
+    padding: 1em;
+    border: 0px;
+    background-color: #f1f1f1;
+    width:400px;
+    margin-left:3.5em;
+    font-size:14pt;
+}
 
 figure {
     position: block;
@@ -68,6 +88,10 @@ main {
     line-height: 20px;
     color: #505050;
 
+}
+h2 {
+    font-family: 'HelveticaNeue-Medium', 'Helvetica Neue', 'sans-serif';
+    font-size: 18px;
 }
 
 #title-style {
