--- a/content-stylesheet.css
+++ b/content-stylesheet.css
@@ -41,6 +41,25 @@ header {
     font-size:14pt;
 }
 
+.embedded_aside {
+    background-color:#99CC99 ;
+    padding: 0.5em;
+    border: 0px;
+    width:400px;
+    margin-left:3.5em;
+    font-size:12pt;
+    text-align:center;
+}
+#code1985 {
+    font-family: Consolas;
+    font-size:10pt;
+    padding: 1em;
+    border: 0px;
+    background-color: #f1f1f1;
+    width:400px;
+    margin-left:3.5em;
+}
+
 figure {
     position: block;
     margin-left: 35px;
@@ -115,6 +134,6 @@ h2 {
 }
 
 footer {
-    margin-top: 5em;
+    margin-top: 3em;
     border-top: 2px groove #606060;
 }
