Stereotypes: Women/Girls in Science.  Block and Procs, the untold story

--- a/content-stylesheet.css
+++ b/content-stylesheet.css
@@ -229,7 +229,9 @@ h2 {
     margin-top: -0.15em;
 
 }
-
+#four-hundred-wide {
+    width:400px;
+}
 #nameplate {
     position: absolute;
     margin-left: 500px;
