--- a/Code/BlackJack/bj_stylesheet.css
+++ b/Code/BlackJack/bj_stylesheet.css
@@ -1,3 +1,12 @@
+h3 {
+    font-family: 'HelveticaNeue-UltraLightItalic', 'Helvetica Neue', 'sans-serif';
+    position: absolute;
+    left: 300px;
+    top: 145px;
+    font-size: 22px;
+    color: #606060;
+}
+
 body {
     font-family: 'HelveticaNeue-UltraLightItalic', 'Helvetica Neue', 'sans-serif';
     /*position:absolute;*/
@@ -11,7 +20,7 @@ body {
     width: 900px;
     height: 400px;
     left: 25px;
-    top: 25px;
+    top: 75px;
     /*background-color:#55AA55;*/
     /*border: 1px solid black;*/
 }
@@ -26,25 +35,39 @@ body {
     /*border: 1px solid black;*/
 }
 
+
+#welcome {
+    position: absolute;
+    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'sans-serif';
+    padding: 1em;
+    border: 0px;
+    width: 400px;
+    border: 1px solid black;
+    background-color:white;
+    left:10em;
+    top:10em;
+}
+.large_definition {
+    font-size: 24px;
+
+}
 #user-message-area {
     position: absolute;
     display:none;
     width: 400px;
-    height: 200px;
+    height: 150px;
     left: 450px;
-    top: 385px;
+    top: 435px;
     background-color: white;
     border: 1px solid black;
 }
 #user-message {
-    font-family: 'HelveticaNeue', 'Helvetica Neue', 'sans-serif';
-    text-size: 20px;
+    font-family: 'HelveticaNeue-Light', 'Helvetica Neue', 'sans-serif';
+    text-size: 24px;
     text-align: center;
     margin: 2em;
-
-    color:#425c8a;
+    /*color:#425c8a;*/
 }
-
 #OK-button {
     position: relative;
     font-family: 'HelveticaNeue-Bold', 'Helvetica Neue Bold', 'Helvetica Neue';
@@ -153,7 +176,7 @@ body {
     left: 0px;
     height: 50px;
     position: fixed;
-    bottom: 0px;
+    top: 0px;
     /*background-color:indigo;*/
 }
 
