--- a/ruby_quick_ref/lang-element.css
+++ b/ruby_quick_ref/lang-element.css
@@ -1,5 +1,5 @@
 h1 {
-    font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue', 'sans-serif';
+    font-family: 'HelveticaNeue', 'Helvetica Neue', 'sans-serif';
     color: #003399;
     font-size: 32px;
     text-align:center;
