large change to array.html, may need to roll back

--- a/ruby_quick_ref/code-format.css
+++ b/ruby_quick_ref/code-format.css
@@ -61,3 +61,12 @@ span.text {
     font-style: normal;
 }
 
+span.non-terminal {
+	font-style: italic;
+}
+
+span.literal {
+	    font-family: Consolas;
+    color: #666666;
+
+}
