--- a/ruby_quick_ref/ruby_quick_ref.css
+++ b/ruby_quick_ref/ruby_quick_ref.css
@@ -20,7 +20,7 @@ header {
     top: 6em;
     width: 60em;
     height: 1200px;
-    background-color: #F9F9F9;
+    background-color: white;
     border: 1px solid black;
     border-radius:25px;
 }
@@ -38,7 +38,6 @@ header {
 .button {
     padding-top: 2em;
     font-size: 20px;
-    text-align: right;
     font-family: 'HelveticaNeue', 'Helvetica Neue', 'sans-serif';
     font-weight: 200;
     text-decoration: none;
