--- a/ruby_quick_ref/lang-element.css
+++ b/ruby_quick_ref/lang-element.css
@@ -68,8 +68,8 @@ h3 {
 }
 
 .method-detail {
-    /*position: absolute;*/
-    /*top:8em;*/
+    position: absolute;
+    top:8em;
     width: 44em;
     margin-left:12em;
     margin-right:2em;
@@ -77,7 +77,7 @@ h3 {
     background-color: white;
     /*border: 1px solid black;*/
     border-radius:5px;
-    display:block;
+    display:none;
     padding-left:1em;
     /*padding-top:1em;*/
 }
