--- a/content-stylesheet.css
+++ b/content-stylesheet.css
@@ -10,7 +10,7 @@
 }
 
 header {
-    position: block;
+    display: block;
     margin-top: 150px;
     margin-left: 32px;
     width: 757px;
@@ -64,7 +64,7 @@ header {
     color: red;
 }
 
-#code2 {
+.code2 {
      margin-left: 2em;
     padding-left: 2em;
 }
@@ -163,7 +163,7 @@ header {
 }
 
 figure {
-    position: block;
+    display: block;
     margin-left: 35px;
     margin-right: 35%;
     width: 600px;
@@ -199,7 +199,7 @@ nav p a:hover {
 }
 
 main {
-    position: block;
+    display: block;
     margin: 3em 35% 5em 35px;
     left: 23px;
 
