--- a/content-stylesheet.css
+++ b/content-stylesheet.css
@@ -36,9 +36,12 @@ header {
     text-align: right;
     font-size: 10pt;
     font-family: 'HelveticaNeue-Medium', 'Helvetica Neue', 'sans-serif';
-
 }
-
+.quote-attr {
+    text-align: right;
+    font-size: 10pt;
+    font-family: 'HelveticaNeue-Medium', 'Helvetica Neue', 'sans-serif';
+}
 .highlight {
     background-color: #ffff00;
     width: 500px;
@@ -47,15 +50,26 @@ header {
 }
 
 #inset1984 {
-
+    font-family: 'Times', 'serif';
     padding: 1em;
     border: 0px;
     background-color: #f1f1f1;
     width: 400px;
-    margin-left: 3.5em;
-    font-size: 14pt;
-}
+    margin-left: 2.5em;
+    border: 1px solid black;
 
+}
+.paul {
+    font-family: 'Times', 'serif';
+
+    padding: 1em;
+    margin-left: 2em;
+    background-color: #f1f1f1;
+    width: 400px;
+    /*margin-left: 2.5em;*/
+    border: 1px solid black;
+
+}
 #code1 {
     height: 200px;
 
@@ -158,8 +172,8 @@ header {
     padding: 1em;
     border: 0px;
     background-color: #f1f1f1;
-    width: 400px;
-    margin-left: 3.5em;
+    width: 500px;
+    margin-left: 1em;
 }
 
 figure {
